# sentinel-ml

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  sentinel-architecture-report.md  sentinel-architecture.jsx
.github/workflows/: ci.yml  fetch-malware-data.yml
ai-detection/: Soar.py  active_alerts.json  alert_manager.py  anomaly_detection_results.csv  anomaly_detector.py  anomaly_report.txt  baseline_alerts.json  detection_comparison.json  incident_log.json  pipeline_alerts.json  response_alerts.json  response_playbook.py  run_ai_pipeline.sh  test.py  test_alerts.json
data/: README.md
docs/: adversarial-analysis-plan.md  adversarial-analysis.md  adversarial-harness-arbetslogg.md  architecture.md  data-sources.md  demo-examples.md  demo-script.md  integration-with-sentinel-upload-api.md  llm-cve-integration-guide.md  llm-cve-technical-reference.md  llm-technical-reference.md  office-makro-forsvar.md  security-analysis-deployment.md  sentinel-ml-presentation.pptx  sentinel-ml-upload-api-integration-architecture.md  sentinel-upload-api-integration-playbook.md  technical-report.md  upload-classifier-honest-training.md
k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  networkpolicy.yaml  pvc.yaml  secret.example.yaml  service.yaml
k8s/maintenance/: models-loader.yaml
runbooks/: sentinel-ml-deploy.md  sentinel-ml-load-models.md
scripts/: compare_ioc_extractors.py  demo_attack_live.py  demo_smoke.py  download_malwarebazaar.py  download_real_threat_reports.py  eval_llm_threat_classifier.py  eval_malware_classifier.py  eval_threat_classifier.py  export_uploads_from_mongo.py  generate_malware_samples.py  generate_presentation.py  generate_synthetic_threat_reports.py  generate_upload_training_data.py  run_adversarial_experiments.py  train_upload_calibrated.py  train_upload_classifier.py
src/sentinel_ml/: __init__.py  cli.py  (+1 more)
tests/: conftest.py  test_adversarial_report.py  test_cve_relevance.py  test_demo_smoke.py  test_env_example.py  test_evasion.py  test_hash_match.py  test_ioc_extract.py  test_llm_classifier.py  test_llm_gate.py  test_llm_threat_benchmark.py  test_log_anomaly.py  test_macro_risk.py  test_ollama_client.py  test_ollama_integration.py  test_outcomes.py  test_poisoning.py  test_prod_import_safety.py  test_prompt_injection.py  test_schemas.py  test_service_api.py  test_threat_classifier.py  test_upload_features.py  test_version.py
(+39 files in other folders)
